# LightSocks-cxx

./: .gitignore  CMakeLists.txt  README.md  cipher.cpp  cipher.h  client.cpp  client.h  main_client.cpp  main_server.cpp  server.cpp  server.h  socks5.cpp  socks5.h  socks5协议说明.md  util.cpp  util.h
lib/base64/: CMakeLists.txt
lib/event/lib/: event.lib  event_core.lib  event_extra.lib
lib/json/: ArduinoJson-v6.15.0.hpp
